--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
